# investment-office

./: .env.example  .gitignore  .graphifyignore  README.md  pyproject.toml
.codex/: hooks.json
.codex/skills/graphify/: SKILL.md
docs/: 시장_연구_설계.md  차트_분석_방법론.md
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: bootstrap_database.py  install_mariadb.ps1  start.ps1  stop_app.ps1
src/investment_office/: __init__.py  config.py  database.py  domain.py  main.py  storage.py
src/investment_office/services/: __init__.py  bulk_fundamentals.py  candidate_discovery.py  chart_analysis.py  codex_provider.py  committee_broker.py  company_research.py  decision_archive.py  discovery_jobs.py  (+19 more)
tests/: site_feedback_runtime.mjs  test_api.py  test_bulk_fundamentals.py  test_candidate_discovery.py  test_chart_analysis.py  test_codex_provider.py  test_committee_broker.py  test_company_research.py  test_dashboard_discovery.py  test_decision_archive.py  test_discovery_jobs.py  test_ecos_context.py  test_full_market_discovery.py  test_fundamental_screening.py  test_instrument_identity.py  test_macro_context.py  test_market_data.py  test_market_overview.py  test_market_regime.py  test_office_game.py  test_orchestrator.py  test_price_gateway.py  test_research_contracts.py  test_research_pipeline.py  test_risk.py  test_scheduled_analysis.py  test_site_feedback_runtime.py  test_site_pages.py  test_source_registry.py  test_storage.py  test_universe_catalog.py  test_work_items.py
(+20 files in other folders)
