[project]
name = "investment-office"
version = "0.1.0"
description = "사람이 최종 승인하는 픽셀형 AI 투자위원회"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "pymysql>=1.1,<2",
    "sqlalchemy>=2.0.41,<2.1",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[project.scripts]
investment-office = "investment_office.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_office"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["investment_office"]
